Add final test for external configured URL

--- a/CloudCustomers.API/appsettings.json
+++ b/CloudCustomers.API/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "UsersApiOptions": {
+	"Endpoint": "https://jsonplaceholder.typicode.com/users"
+  },
   "AllowedHosts": "*"
 }
 
